force-app/main/default/objects/HO_Change_Log__c/HO_Change_Log__c.object-meta.xml
<CustomObject>
    <label>HO変更ログ</label>
    <pluralLabel>HO変更ログ</pluralLabel>
    <description>MCPカスタムツール経由の更新プレビュー・適用・ロールバック履歴（項目単位）</description>
    <nameField>
        <label>ログ番号</label>
        <type>AutoNumber</type>
        <displayFormat>CL-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>