force-app/main/default/objects/HO_Change_Log__c/fields/After_Value__c.field-meta.xml
<CustomField>
    <fullName>After_Value__c</fullName>
    <label>変更後</label>
    <description>適用予定の値</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>