force-app/main/default/objects/HO_Change_Log__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <label>バッチID</label>
    <description>プレビュー単位で発行される一括更新ID</description>
    <type>Text</type>
    <length>40</length>
    <externalId>true</externalId>
</CustomField>