force-app/main/default/objects/HO_Change_Log__c/fields/Before_Value__c.field-meta.xml
<CustomField>
    <fullName>Before_Value__c</fullName>
    <label>変更前</label>
    <description>プレビュー時点の値</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>