force-app/main/default/objects/HO_Change_Log__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>項目</label>
    <description>更新対象の項目API名</description>
    <type>Text</type>
    <length>80</length>
</CustomField>