force-app/main/default/objects/HO_Change_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>メッセージ</label>
    <description>エラーや競合の内容</description>
    <type>Text</type>
    <length>255</length>
</CustomField>