force-app/main/default/objects/HO_Change_Log__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>変更理由</label>
    <description>AI/実行者が入力した変更理由</description>
    <type>Text</type>
    <length>255</length>
</CustomField>