force-app/main/default/objects/HO_Change_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>レコードID</label>
    <description>更新対象のレコードID</description>
    <type>Text</type>
    <length>18</length>
    <externalId>true</externalId>
</CustomField>