force-app/main/default/objects/HO_Change_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <description>Previewed=プレビューのみ / Applied=適用済 / Conflict=プレビュー後に他者が更新 / Failed=エラー / RolledBack=取消済</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previewed</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Conflict</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>RolledBack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>